fix [#33394] Skin modifier doesn't show generated skin mesh in EditMode with Texured Solid draw option